--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,7 +41,7 @@
           <div class="col-3">
             <mat-form-field hideRequiredMarker appearance="legacy">
                 <input matInput placeholder="Zip Code" [(ngModel)]="zipcode" name="zipcode" id="inputdefault" type ="text" (ngModelChange)="checkForDetails()" [attr.disabled]="disableField" [formControl]="email" required>
-                <mat-error *ngIf="email.invalid" align="end">{{getErrorMessage()}}</mat-error> 
+                <!--<mat-error *ngIf="email.invalid" align="end">{{getErrorMessage()}}</mat-error> -->
             </mat-form-field>
           </div>
           <br>
