removing PP and PPA

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -617,8 +617,8 @@
             </div>
             <br>
             <div class="sub-num">
-              <span *ngIf="propertyClaim">PP-{{claimNumber}}</span>
-              <span *ngIf="!propertyClaim">PPA-{{claimNumber}}</span>
+              <span *ngIf="propertyClaim">{{claimNumber}}</span>
+              <span *ngIf="!propertyClaim">{{claimNumber}}</span>
             </div>
           <br>
           <br>
